@@ -40,6 +40,8 @@
 
 #define GRAPH_CODE(c) (c == GR_PLOT || c == GR_XY || c == GR_IMP || GR_DUMMY)
 
+#define COINT_CODE(c) (c == COINT || c == COINT2)
+
 typedef struct _selector selector;
 
 void clear_selector (void);
