@@ -1,6 +1,6 @@
 version 1.3.1
-- Add FIML estimation to system command; also add 
-  over-identification test for FIML systems
+- Add FIML and LIML estimation to system command; also add 
+  LR over-identification tests for these systems
 - Add univariate kernel density estimation (under the Variable
   menu in the gui program -- no script counterpart)
 - Purge the lesser-used model selection statistics, and use
@@ -16,6 +16,8 @@ version 1.3.1
   hidden ones
 - Fix newly introduced bug in time-series graphs: don't show two y 
   axes if only one is actually used
+- Fix for johansen cointegration test: don't crash if the user
+  puts the const into the list of variables
 
 11/15/2004 version 1.3.0
 - add "append" command, to append data to the current dataset,
